--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <a href="aboutme.html">About Me</a>
     <center style="background-color: aquamarine;">
       <h1>Home</h1>
-      <img src="images/MyHouse.jpg" height="400" alt="centered image" class="aligncenter">
-      <h2>PoolHouse</h2>
-      <img src="images/PoolHouse.jpg" height="400" alt="centered image" class="aligncenter">
-      <h2>Garden One</h2>
-      <img src="images/Garden1.jpg" height="400" alt="centered image" class="aligncenter">
-      <h2>Garden Two</h2>
-      <img src="images/Garden2.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="home.jfif" height="400" alt="centered image" class="aligncenter">
+      <h2>Backyard</h2>
+      <img src="backyard.jfif" height="400" alt="centered image" class="aligncenter">
+      <h2>Gaming Center</h2>
+      <img src="gameing.jfif" height="400" alt="centered image" class="aligncenter">
+      <h2>Kitchen</h2>
+      <img src="kitchen.jfif" height="400" alt="centered image" class="aligncenter">
    </center>
   <br>
     <h1>Jeopardy!</h1>
