--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,4 @@
-<!doctype html>
+s<!doctype html>
 	<html lang="en">
 	  <head>
 	    <meta charset="utf-8">
@@ -10,15 +10,14 @@
     <a href="aboutme.html">About Me</a>
     <center>
     <h1>This is my family!</h1>
-    <h2>   Parents</h2>
-     <img src="images/Elwyn_wk2.jpg" height="300">
+    <h2>Parents</h2>
+     <img src="parents.HEIC" height="300">
     <h3>Brother</h3>
-      <img src="images/Elwyn_wk1.jpg" height="300">
-      <img src="images/Bearhat.jpg" height="300">
-      <img src="images/Warrior_princess.jpg" height="300">
+      <img src="mebro2.heic" height="300">
+      <img src="mebro.JPG" height="300">
       <br> 
-    <h3>Fish</h3>
-      <img src="images/Ellieonbridge.jpg" height="400">
+    <h2>Fish</h2>
+      <img src="fish.HEIC" height="400">
       <br>
   
     </center>
