--- a/aboutme.html
+++ b/aboutme.html
@@ -11,13 +11,13 @@ s<!doctype html>
     <center>
     <h1>This is my family!</h1>
     <h2>Parents</h2>
-     <img src="parents.HEIC" height="300">
+     <img src="parents.jpg" height="300">
     <h3>Brother</h3>
-      <img src="mebro2.heic" height="300">
+      <img src="mebro2.jpg" height="300">
       <img src="mebro.JPG" height="300">
       <br> 
     <h2>Fish</h2>
-      <img src="fish.HEIC" height="400">
+      <img src="fish.jpg" height="400">
       <br>
   
     </center>
