--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <a href="aboutme.html">About Me</a>
     <center style="background-color: aquamarine;">
       <h1>Home</h1>
-      <img src="images/H.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="home.jpg" height="400" alt="centered image" class="aligncenter">
       <h2>Backyard</h2>
-      <img src="images/PoolHouse.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="backyard.jpg" height="400" alt="centered image" class="aligncenter">
       <h2>Game room</h2>
-      <img src="images/Garden1.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="gameing.jpg" height="400" alt="centered image" class="aligncenter">
       <h2>Creativity space</h2>
-      <img src="images/Garden2.jpg" height="400" alt="centered image" class="aligncenter">
+      <img src="kitchen.jpg" height="400" alt="centered image" class="aligncenter">
    </center>
   <br>
     <h1><a href="https://www.youtube.com/watch?v=Ay_bpvys_AU&pp=ygUOa2lkYWFuIHphYWxpbWE%3D">Kidaan Zaalima !</a></h1>
